--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,5 +5,5 @@
 @import "partials/nav";
 @import "partials/latest-recipe";
 @import "partials/directory";
-@import "partials/ingredients";
-@import "partials/steps";
+@import "partials/new-recipe";
+
