--- a/src/scss/partials/_globals.scss
+++ b/src/scss/partials/_globals.scss
@@ -6,6 +6,8 @@
 
 body {
 	margin: 0 auto;
+	font-family: sans-serif;
+	overflow-x: hidden;
 }
 
 ul {
@@ -14,4 +16,37 @@ ul {
 
 a {
 	text-decoration: none;
+}
+
+input[type="text"] {
+  margin: 0;
+  font-size: 1rem;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+}
+
+input[type="text"]:focus {
+  outline: none;
+}
+
+.app-wrapper {
+	position: relative;
+}
+
+.slide {
+	position: absolute;
+	width: 100%;
+	transition: transform 1s, opacity 1s;
+}
+
+.active {
+	transform: translateX(0);
+	opacity: 1;
+}
+
+.inactive {
+	transform: translateX(100%);
+	opacity: 0;
 }
