--- a/templates/cookbook.html
+++ b/templates/cookbook.html
@@ -1,10 +1,30 @@
 <section class="latest-recipes">
-	<h1 class="latest-recipes-heading">My Recipe</h1>
+	<h1 class="latest-recipes-heading">Latest Recipe</h1>
 	<article class="recipe">
-		<h2 class="recipe-name"></h2>
-		<p class="recipe-category"></p>
-		<p class="recipe-cook-time"></p>
-		<p class="recipe-prep-time"></p>
-		<img class="recipe-image" src="" />
+		<h2 class="recipe-name">Peanut Butter Chocolate Chip Cookies</h2>
+		<div class="recipe-details">
+			<p class="recipe-category">Category: Dessert</p>
+			<p class="recipe-prep-time">Prep Time: 15 min</p>
+			<p class="recipe-cook-time">Cook Time: 8 min</p>
+		</div>
+		<img class="recipe-image" src="../img/cookies.jpeg" />
+	</article>
+	<article class="recipe">
+		<h2 class="recipe-name">Ann Marie's Chicken Tenders</h2>
+		<div class="recipe-details">
+			<p class="recipe-category">Category: Chicken</p>
+			<p class="recipe-prep-time">Prep Time: 20 min</p>
+			<p class="recipe-cook-time">Cook Time: 25 min</p>
+		</div>
+		<img class="recipe-image" src="../img/chicken.jpg" />
+	</article>
+	<article class="recipe">
+		<h2 class="recipe-name">Fruit + Caramel Pancakes</h2>
+		<div class="recipe-details">
+			<p class="recipe-category">Category: Breakfast</p>
+			<p class="recipe-prep-time">Prep Time: 30 min</p>
+			<p class="recipe-cook-time">Cook Time: 30 min</p>
+		</div>
+		<img class="recipe-image" src="../img/pancake.jpeg" />
 	</article>
 </section>
