--- a/templates/latest.html
+++ b/templates/latest.html
@@ -1,10 +1,35 @@
 <section class="latest-recipes">
-	<h1 class="latest-recipes-heading">Latest Recipes</h1>
+	<h1 class="latest-recipes-heading">Latest Recipe</h1>
 	<article class="recipe">
-		<h2 class="recipe-name"></h2>
-		<p class="recipe-category"></p>
-		<p class="recipe-cook-time"></p>
-		<p class="recipe-prep-time"></p>
-		<img class="recipe-image" src="" />
+		<h2 class="recipe-name">Peanut Butter Chocolate Chip Cookies</h2>
+		<div class="recipe-details">
+			<p class="recipe-category">Category: Dessert</p>
+			<p class="recipe-prep-time">Prep Time: 15 min</p>
+			<p class="recipe-cook-time">Cook Time: 8 min</p>
+		</div>
+		<img class="recipe-image" src="../img/cookies.jpeg" />
+		<h3>Ingredients</h3>
+		<ul>
+			<li>Sugar 6 tbsp</li>
+			<li>Brown Sugar 6 tbsp</li>
+			<li>Butter (softened) 2tbsp</li>
+			<li>Vanilla Extract 1 tsp</li>
+			<li>1 Egg</li>
+			<li>Peanut Butter 1 cup</li>
+			<li>Baking Soda 1/2 tsp</li>
+			<li>Salt 1/2 tsp</li>
+			<li>Flour 3/4 cup</li>
+			<li>Chocolate Chips 3/4 cup</li>
+		</ul>
+		<h3>Instructions</h3>
+		<ol>
+			<li>Preheat over to 375 degrees Fahrenheit.</li>
+			<li>Cream sugar, brown sugar and butter in large mixing bowl</li>
+			<li>Break egg into mixture and add vanilla. Mix well</li>
+			<li>Add Peanut butter, baking soda and salt into mixture.</li>
+			<li>Add flour and chocolate chips, mixing slowly to start then at regular speed.</li>
+			<li>Use tablespoon to form dough into balls making about 12-15 to a pan. Press on top with a fork in an X shape.</li>
+			<li>Bake for 7 to 8 minutes. Cookies should be soft consistency. Let cool for 5-10 minutes.</li>
+		</ol>
 	</article>
 </section>
