--- a/src/scss/partials/_globals.scss
+++ b/src/scss/partials/_globals.scss
@@ -18,6 +18,11 @@ a {
 	text-decoration: none;
 }
 
+img {
+	height: 9rem;
+	width: 15rem;
+}
+
 input[type="text"] {
   margin: 0;
   font-size: 1rem;
@@ -38,7 +43,7 @@ input[type="text"]:focus {
 .slide {
 	position: absolute;
 	width: 100%;
-	transition: transform 1s, opacity 1s;
+	transition: transform 1s, opacity .25s;
 }
 
 .active {
