--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -23,6 +23,10 @@ ul {
 a {
   text-decoration: none; }
 
+img {
+  height: 9rem;
+  width: 15rem; }
+
 input[type="text"] {
   margin: 0;
   font-size: 1rem;
@@ -40,7 +44,7 @@ input[type="text"]:focus {
 .slide {
   position: absolute;
   width: 100%;
-  transition: transform 1s, opacity 1s; }
+  transition: transform 1s, opacity 0.25s; }
 
 .active {
   transform: translateX(0);
@@ -116,6 +120,17 @@ input[type="text"]:focus {
 /* Latest Recipe Section Styles */
 .latest-recipes {
   padding-top: 3rem; }
+
+.recipe {
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 3rem; }
+  .recipe .recipe-details {
+    display: inline-block;
+    width: 50%; }
+  .recipe .recipe-image {
+    display: inline-block;
+    float: right; }
 
 .ingr {
   margin-top: 5rem; }
